--- a/sandbox-gvb/MainPage.xaml
+++ b/sandbox-gvb/MainPage.xaml
@@ -10,7 +10,7 @@
            Aspect="AspectFit"/>
 
             <!-- Rode path -->
-            <Path Stroke="#EF4236"
+            <Path Stroke="Transparent"
       StrokeThickness="16"
       StrokeLineCap="Round"
       StrokeLineJoin="Round"
@@ -21,7 +21,7 @@
             </Path>
 
             <!-- Gele path -->
-            <Path Stroke="#FBD116" 
+            <Path Stroke="Transparent" 
       StrokeThickness="16"
       StrokeLineCap="Round"
       StrokeLineJoin="Round"
@@ -32,7 +32,7 @@
             </Path>
 
             <!-- Oranje path -->
-            <Path Stroke="#F57F20" 
+            <Path Stroke="Transparent" 
       StrokeThickness="16"
       StrokeLineCap="Round"
       StrokeLineJoin="Round"
@@ -43,7 +43,7 @@
             </Path>
 
             <!-- Groene path -->
-            <Path Stroke="#2A9947" 
+            <Path Stroke="Transparent" 
       StrokeThickness="16"
       StrokeLineCap="Round"
       StrokeLineJoin="Round"
@@ -54,7 +54,7 @@
             </Path>
 
             <!-- Blauwe path -->
-            <Path Stroke="#00AEEF" 
+            <Path Stroke="Transparent" 
       StrokeThickness="16"
       StrokeLineCap="Round"
       StrokeLineJoin="Round"
@@ -102,9 +102,54 @@
                 </Rectangle.GestureRecognizers>
             </Rectangle>
 
+            <!-- Diagonale lijnen -->
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="22"
+    HeightRequest="12"
+    RadiusX="0" RadiusY="0"
+    TranslationX="316.5" TranslationY="242.32"
+    Rotation="45">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+            <Rectangle
+    Fill="white"
+Stroke="Black"
+StrokeThickness="4"
+WidthRequest="22"
+HeightRequest="12"
+    RadiusX="0" RadiusY="0"
+    TranslationX="440.99" TranslationY="117.83"
+    Rotation="45">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="22"
+    HeightRequest="12"
+    RadiusX="0" RadiusY="0"
+    TranslationX="516.22" TranslationY="42.6"
+    Rotation="45">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
 
             <Path
-    Fill="Transparent"
+    Fill="White"
+    Stroke="black"
+    StrokeThickness="4"
     Data="M39.6498 4.57673C36.2133 1.14069 30.641 1.14117 27.2054 4.5777C24.7875 6.9942 24.0785 10.4654 25.0609 13.5093L24.8666 13.7037C21.8226 12.7208 18.3519 13.4302 15.9349 15.8472C13.518 18.2642 12.809 21.7359 13.7914 24.7794L13.5092 25.0611C10.4657 24.0782 6.99402 24.7882 4.57703 27.2047C1.14099 30.6412 1.14099 36.2134 4.57703 39.65C8.01355 43.0865 13.5863 43.0865 17.0219 39.6505C19.4398 37.2335 20.1488 33.7618 19.1664 30.7178L19.4476 30.4361C22.4916 31.419 25.9633 30.7095 28.3793 28.2925C30.7972 25.876 31.5062 22.4044 30.5238 19.3604L30.7181 19.1661C33.7611 20.1495 37.2328 19.44 39.6498 17.023C43.0863 13.5865 43.0863 8.01374 39.6498 4.57673Z"
     TranslationX="364"
     TranslationY="171.5">
@@ -113,6 +158,61 @@
                     <TapGestureRecognizer Tapped="OnStationTapped"/>
                 </Path.GestureRecognizers>
             </Path>
+
+            <Path
+    Fill="White"
+    Stroke="Black"
+    StrokeThickness="4"
+    Data="M19.5996 26.7383C19.5996 23.3203 17.6465 20.3638 14.7988 18.9067V18.6313C17.6465 17.1743 19.5996 14.2178 19.5996 10.7998C19.5996 5.94042 15.6602 2 10.7988 2C5.93945 2 2 5.94043 2 10.7998C2 14.2173 3.95215 17.1733 6.79883 18.6309V18.9072C3.95215 20.3647 2 23.3208 2 26.7383C2 30.1558 3.95215 33.1118 6.79883 34.5693V34.9688C3.95215 36.4263 2 39.3823 2 42.7998C2 47.6592 5.93945 51.5996 10.7988 51.5996C15.6602 51.5996 19.5996 47.6592 19.5996 42.7998C19.5996 39.3818 17.6465 36.4253 14.7988 34.9683V34.5698C17.6465 33.1128 19.5996 30.1562 19.5996 26.7383Z"
+    TranslationX="196"
+    TranslationY="553">
+
+                <Path.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped" />
+                </Path.GestureRecognizers>
+
+            </Path>
+
+            <Path
+    Fill="White"
+    Stroke="Black"
+    StrokeThickness="4"
+    Data="M42.7998 2C39.3818 2 36.4258 3.95264 34.9687 6.7998H34.6924C33.2353 3.95263 30.2793 2 26.8613 2C23.4433 2 20.4873 3.95264 19.0302 6.7998H18.6308C17.1738 3.95263 14.2178 2 10.7998 2C5.94042 2 2 5.93945 2 10.7998C2 15.6602 5.94043 19.6001 10.7998 19.6001C14.2178 19.6001 17.1738 17.647 18.6308 14.7998H19.0302C20.4873 17.647 23.4433 19.6001 26.8613 19.6001C30.2793 19.6001 33.2353 17.647 34.6924 14.7998H34.9687C36.4258 17.647 39.3818 19.6001 42.7998 19.6001C47.6592 19.6001 51.5996 15.6602 51.5996 10.7998C51.5996 5.93945 47.6592 2 42.7998 2Z"
+    TranslationX="400"
+    TranslationY="522">
+                <Path.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped" />
+                </Path.GestureRecognizers>
+
+            </Path>
+
+            <Path
+    Fill="White"
+    Stroke="Black"
+    StrokeThickness="4"
+    Data="M14.8008 19.0303V18.6309C17.6475 17.1733 19.6006 14.2173 19.6006 10.7998C19.6006 5.94042 15.6602 2 10.8008 2C5.93945 2 2 5.94043 2 10.7998C2 14.2178 3.95264 17.1743 6.80078 18.6313V19.0298C3.95264 20.4868 2 23.4434 2 26.8613C2 31.7207 5.93945 35.6611 10.8008 35.6611C15.6602 35.6611 19.6006 31.7207 19.6006 26.8613C19.6006 23.4438 17.6475 20.4878 14.8008 19.0303Z"
+    TranslationX="345"
+    TranslationY="571">
+                <Path.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped" />
+                </Path.GestureRecognizers>
+
+            </Path>
+
+            <Path
+    Fill="White"
+    Stroke="Black"
+    StrokeThickness="4"
+    Data="M42.7998 2C39.3818 2 36.4258 3.95264 34.9687 6.7998H34.6924C33.2353 3.95263 30.2793 2 26.8613 2C23.4433 2 20.4873 3.95264 19.0302 6.7998H18.6308C17.1738 3.95263 14.2178 2 10.7998 2C5.94042 2 2 5.93896 2 10.7998C2 15.6597 5.94043 19.5996 10.7998 19.5996C14.2178 19.5996 17.1738 17.647 18.6308 14.7998H19.0302C20.4873 17.647 23.4433 19.5996 26.8613 19.5996C30.2793 19.5996 33.2353 17.647 34.6924 14.7998H34.9687C36.4258 17.647 39.3818 19.5996 42.7998 19.5996C47.6592 19.5996 51.5996 15.6597 51.5996 10.7998C51.5996 5.93896 47.6592 2 42.7998 2Z"
+    TranslationX="400"
+    TranslationY="633">
+                <Path.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped" />
+                </Path.GestureRecognizers>
+
+            </Path>
+
+
 
             <!-- Groene horizontale lijnen (Rectangles met GestureRecognizer) -->
 
@@ -202,6 +302,152 @@
 
             <Rectangle
     Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="38"
+    HeightRequest="12"
+    TranslationX="401" TranslationY="708.8">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="38"
+    HeightRequest="12"
+    TranslationX="401" TranslationY="776.24">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="38"
+    HeightRequest="12"
+    TranslationX="401" TranslationY="843.68">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="38"
+    HeightRequest="12"
+    TranslationX="401" TranslationY="911.12">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="38"
+    HeightRequest="12"
+    TranslationX="401" TranslationY="978.56">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+
+            <Rectangle
+    Fill="white"
+    Stroke="Black" 
+    StrokeThickness="4"
+    WidthRequest="12"
+    HeightRequest="38"
+    TranslationX="120.87" TranslationY="132.03">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="12"
+    HeightRequest="38"
+    TranslationX="91.97" TranslationY="571.82">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="12"
+    HeightRequest="38"
+    TranslationX="278.01" TranslationY="571.82">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="12"
+    HeightRequest="22"
+    TranslationX="506.12" TranslationY="697">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="12"
+    HeightRequest="22"
+    TranslationX="622.33" TranslationY="697">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="12"
+    HeightRequest="38"
+    TranslationX="606.06" TranslationY="1021.00">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="12"
+    HeightRequest="38"
+    TranslationX="494.69" TranslationY="1021.00">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+
+            <Rectangle
+    Fill="white"
     Stroke="Black" 
     StrokeThickness="4"
     WidthRequest="38"
@@ -271,8 +517,55 @@ TranslationX="404" TranslationY="473.72">
                     <TapGestureRecognizer Tapped="OnStationTapped"/>
                 </Rectangle.GestureRecognizers>
             </Rectangle>
+            
+            
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="22"
+    HeightRequest="12"
+    TranslationX="691.83" TranslationY="742.12">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped" CommandParameter="1"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
 
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="22"
+    HeightRequest="12"
+    TranslationX="691.83" TranslationY="810.98">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped" CommandParameter="1"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
 
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="22"
+    HeightRequest="12"
+    TranslationX="691.83" TranslationY="879.84">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped" CommandParameter="1"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
+
+            <Rectangle
+    Fill="white"
+    Stroke="Black"
+    StrokeThickness="4"
+    WidthRequest="22"
+    HeightRequest="12"
+    TranslationX="691.83" TranslationY="948.70">
+                <Rectangle.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnStationTapped" CommandParameter="1"/>
+                </Rectangle.GestureRecognizers>
+            </Rectangle>
 
         </AbsoluteLayout>
     </ScrollView>
